--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ exclude:
 # Site settings
 title: Techit
 description: > # this means to ignore newlines until "baseurl:"  A COMMON GROUND FOR MY MAKER PROJECT UPDATES, PUBLISHING TOOLS, AND SHARING TECH TIPS.
-    A technology blog for helping you find my maker projects, tools, and best practices.
+    A technology blog for sharing my maker projects, tools, and best practices.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "https://techit.mandmshafer.com" # the base hostname & protocol for your site
 
