setting up first projects post - #sunriseAlarm

--- a/_config.yml
+++ b/_config.yml
@@ -12,5 +12,9 @@ url: "https://techit.mandmshafer.com" # the base hostname & protocol for your si
 
 github_username: mshafer1
 
+collections:
+  Projects:
+    output: true
+
 # Build settings
 markdown: kramdown
