add setup for comics

--- a/_data/pages.yaml
+++ b/_data/pages.yaml
@@ -5,6 +5,8 @@ list:
   url: "#blog"
 - title: Projects
   url: "#projects"
+- title: Comics
+  url: "#comics"
 - title: Contact
   url: contact
 - title: Support
