--- a/_data/pages.yaml
+++ b/_data/pages.yaml
@@ -7,6 +7,8 @@ list:
   url: "#projects"
 - title: Comics
   url: "#comics"
+- title: Portfolio
+  url: portfolio
 - title: Contact
   url: contact
 - title: Support
